final code v.1
